--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bip-cli",
+  "name": "@bip-sh/cli",
   "version": "0.1.0",
-  "description": "",
+  "description": "Bip is an easy to use static website hosting platform.",
   "main": "src/index.js",
   "bin": {
     "bip": "./src/index.js"
@@ -17,10 +17,17 @@
     "ora": "^4.0.3",
     "prompts": "^2.3.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bip-sh/cli.git"
+  },
+  "author": "Joel Kennedy <joel@bip.sh>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/bip-sh/cli/issues"
+  },
+  "homepage": "https://github.com/bip-sh/cli#readme"
 }
