--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "commander": "^5.0.0",
     "configstore": "^5.0.1",
     "figlet": "^1.3.0",
+    "node-emoji": "^1.10.0",
     "node-fetch": "^2.6.0",
     "open": "^7.0.3",
     "ora": "^4.0.3",
