--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "archiver": "^4.0.2",
     "chalk": "^3.0.0",
+    "cli-progress": "^3.8.2",
     "cli-table": "^0.3.1",
     "commander": "^5.0.0",
     "configstore": "^5.0.1",
     "figlet": "^1.3.0",
+    "got": "^11.6.0",
     "node-emoji": "^1.10.0",
     "node-fetch": "^2.6.0",
     "open": "^7.0.3",
